# midman-project

./: .gitignore  Cargo.toml  docker-compose.yml  note.txt
crates/app/src/: App.tsx
crates/app/src-tauri/: tauri.conf.json
crates/backend/: Cargo.toml  create-table.sql  docker-compose.yaml
crates/backend/migrations/: 20260502063700_create_users.up.sql  20260619063958_create_token_blacklist.down.sql  20260619063958_create_token_blacklist.up.sql
crates/backend/src/: db.rs  main.rs  middleware.rs
crates/backend/src/handlers/: room.rs  user.rs
crates/backend/src/model/: user.rs
crates/backend/src/routes/: auth.rs  mod.rs  room.rs  user.rs
crates/shared/src/: lib.rs
