[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
bcrypt = "0.19.0"
jsonwebtoken = "10.3.0"
rand = "0.10.1"
serde_json = "1.0.149"
shared = { path = "../shared" }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "chrono", "postgres"] }
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
# Nanti kita tambahkan axum dan tokio di sini